--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Welcome to my page :3</h1>
+    <h1><p>>Welcome to my page :3</h1></p>
+    <img src="C:\Users\aavas\OneDrive\Pictures\Black hakerman.png">
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">click here!</a>
 </body>
 </html>
