--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1><p>>Welcome to my page :3</h1></p>
-    <img src="C:\Users\aavas\OneDrive\Pictures\Black hakerman.png">
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">click here!</a>
+    <img src="Black hakerman.png">
+    <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">click here for epicness!</a></p>
 </body>
 </html>
