--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1><p>>Welcome to my page :3</h1></p>
-    <img src="Black hakerman.png">
-    <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">click here for epicness!</a></p>
+    <h1><p>Welcome to my page :3</h1></p>
+    <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="Black hakerman.png"></a></p>
 </body>
 </html>
