--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1><p>Welcome to my page :3</h1></p>
-    <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="Black hakerman.png"></a></p>
+    <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&t=84s"><img src="Black hakerman.png"></a></p>
+    <p><a href="https://youtu.be/f8mL0_4GeV0"><img src="METAL PIPE.jpg"></a></p>
 </body>
 </html>
