trying to fix but failed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
     <h1><p>Welcome to my page :3</h1></p>
-    <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&t=84s"><img src="Black hakerman.png"></a></p>
-    <p><a href="https://youtu.be/f8mL0_4GeV0"><img src="METAL PIPE.jpg"></a></p>
+    <div>
+        <image>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&t=84s"><img src="Black hakerman.png" width="300" ></a></p>
+            <p><a href="https://youtu.be/f8mL0_4GeV0"><img src="METAL PIPE.jpg" width="200"></a></p>
+        </image>
+    </div>
+        
 </body>
 </html>
