work in progress

--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
-<body>
-    <h1><p>Welcome to my page :3</h1></p>
+<body>  
+    
+    <h1><p>Work in progress:3</h1></p>
     <div>
-        <image>
-            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&t=84s"><img src="Black hakerman.png" width="300" ></a></p>
-            <p><a href="https://youtu.be/f8mL0_4GeV0"><img src="METAL PIPE.jpg" width="200"></a></p>
-        </image>
+            <p>Click <a href="wesbite filler 1.png">here</a> to see the end result</p>
     </div>
         
 </body>
