--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <script src='main.js'></script>
 </head>
 <body>  
-    
+
     <h1><p>Work in progress:3</h1></p>
     <div>
-            <p>Click <a href="wesbite filler 1.png">here</a> to see the end result</p>
+            <h3><p>Click <a href="wesbite filler 1.png">here</a> to see the end result</p></h3>
     </div>
         
 </body>
